<resources>
    <string name="app_name">Chega Junto</string>
    <string name="NomeDoApp">Fitness</string>

    <string name="Curitiba">Curitiba e Região Metropolitana</string>

    <string name="EscolhaModalidade">Escolha a Modalidade do Grupo</string>

    <string name="HorarioDeInicio">Horário de Início (HH:MM):</string>
    <string name="HorarioDeTermino">Horário de Término (HH:MM):</string>

    <string name="ConfiguracoesDeConta">Configurações e Alterações</string>
    <string name="ConfiguracoesDeConta2">de Informações</string>

    <string name="SairDaConta">Sair Da Conta</string>
    <string name="ApagarConta">Apagar Conta</string>
    <string name="TrocarSenha">Trocar Senha</string>

    <string name="Voltar">Voltar</string>
    <string name="Cadastro">Cadastro</string>
    <string name="Login">Login</string>
    <string name="Sobre">Sobre</string>
    <string name="Filtrar">Filtrar</string>
    <string name="Criar">Criar</string>

    <string name="FiltrarGrupos">Filtrar Grupos</string>
    <string name="FiltrarEventos">Filtrar Eventos</string>
    <string name="FiltrarGruposFavoritos">Filtrar Grupos Favoritos</string>
    <string name="FiltrarEventosFavoritos">Filtrar Eventos Favoritos</string>
    <string name="FiltrarGruposCriados">Filtrar Grupos Criados</string>
    <string name="FiltrarGruposQueParticipo">Filtrar Grupos que Participo</string>

    <string name="Grupos">Grupos</string>
    <string name="Eventos">Eventos</string>
    <string name="Configuracao">Configurações</string>
    <string name="BemVindo">Seja Bem Vindo</string>

    <string name="Alterar">Alterar</string>

    <string name="EventosImportantes">Eventos Importantes</string>

    <string name="GruposEsperam">Os Grupos esperam por você</string>
    <string name="GruposDisponiveis">Grupos Disponíveis</string>
    <string name="GruposCriados">Grupos Criados</string>
    <string name="GruposQueParticipo">Grupos que Participo</string>

    <string name="SugerirEvento">Sugerir Evento</string>

    <string name="ModalidadesFavoritos">Modalidades Favoritas</string>
    <string name="Notificacao">Notificações</string>

    <string name="SuasModalidadesFavoritos">suas Modalidades Favoritas</string>

    <string name="DesejoNotificacao">Desejo receber notificações a respeito de
        todos os eventos adcionados e grupos criados relacionados com as minhas
        modalidades favoritas.</string>

    <string name="Salvar">Salvar</string>
    <string name="Minhas">Minhas</string>
    <string name="Opcional">Opcional</string>

    <string name="AquiModalidadesFavoritas">Aqui está tudo sobre as</string>
    <string name="GruposDasModalidadesFavoritas">Modalidades favoritas</string>
    <string name="EventosDasModalidadesFavoritas">Eventos favoritos</string>
    <string name="VerModalidadesFavoritas">Ver Modalidades favoritas</string>
    <string name="DefinirModalidadesFavoritas">Definir modalidades favoritas</string>

    <string name="Data">Data:</string>
    <string name="DataDia">Dia:</string>
    <string name="DataMes">Mês:</string>
    <string name="DataAno">Ano:</string>
    <string name="Horario">Horário:</string>
    <string name="Senha">Senha:</string>
    <string name="ConfirmarSenha">Confirmar Senha:</string>
    <string name="Email">Email:</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="Nome">Nome:</string>
    <string name="Sexo">Sexo:</string>
    <string name="Celular">N° Celular:</string>


    <string name="Modalidades">Modalidades</string>

    <string name="Corrida">Corrida</string>
    <string name="Basquete">Basquete</string>
    <string name="Voleibol">Voleibol</string>
    <string name="VoleiDeAreia">Volei de Areia</string>
    <string name="FutebolDeCampo">Futebol de Campo</string>
    <string name="FutebolDeRua">Futebol de Rua</string>
    <string name="FutebolDeAreia">Futebol de Areia</string>
    <string name="Futsal">Futsal</string>
    <string name="Calistenia">Calistenia</string>
    <string name="TreinoAoArLivre">Treino ao ar Livre</string>
    <string name="Yoga">Yoga</string>
    <string name="Trilha">Trilha</string>
    <string name="Ciclismo">Ciclismo</string>
    <string name="FutebolAmericano">Futebol Americano</string>
    <string name="Rugby">Rugby</string>
    <string name="Slackline">Slackline</string>
    <string name="JiuJitsu">Jiu-Jitsu</string>
    <string name="Karate">Karatê</string>
    <string name="Boxe">Boxe</string>
    <string name="MuayThai">Muay Thai</string>
    <string name="KravMaga">Krav Magá</string>
    <string name="KungFu">Kung Fu</string>
    <string name="Tenis">Tênis</string>
    <string name="TenisDeMesa">Tênis De Mesa</string>
    <string name="Xadrez">Xadrez</string>
    <string name="Meditacao">Meditação</string>
    <string name="Parkour">Parkour</string>
    <string name="Skate">Skate</string>
    <string name="FutVolei">FutVolei</string>
    <string name="Caminhada">Caminhada</string>
    <string name="Danca">Dança</string>
    <string name="Patins">Patins</string>
    <string name="CrossFit">CrossFit</string>
    <string name="Handebol">Handebol</string>

    <string name="NomeGrupo">Nome do Grupo:</string>
    <string name="NomeModalidade">Nome da Modalidade:</string>
    <string name="DataGrupo">Data:</string>
    <string name="HoraInicio">Hora Inicial:</string>
    <string name="HoraFinal">Hora Final:</string>

    <string name="Participar">Participar</string>
    <string name="Grupo">Grupo</string>

    <string name="SenhaNova">Senha Nova:</string>
    <string name="ConfirmarSenhaNova">Confirmar Senha Nova:</string>
    <string name="SenhaAntiga">Senha Antiga:</string>

    <string name="Ate">até às</string>

    <string name="Localizacao">Localização:</string>
    <string name="Descricao">Descrição:</string>

    <string name="Custo">Custo:</string>
    <string name="Iniciante">Iniciante</string>
    <string name="Intermediario">Intermediário</string>
    <string name="Avancado">Avançado</string>

    <string name="CriarGrupo">Criar Grupo</string>
    <string name="NovoGrupo">Novo Grupo</string>
    <string name="Nivel">Nível:</string>
    <string name="DataCompleta">Data Completa:</string>
</resources>
