<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corDeFundo"
    tools:context=".grupos.CriarGrupo">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/corDeFundo"
        tools:context=".grupos.CriarGrupo"
        tools:layout_editor_absoluteX="571dp"
        tools:layout_editor_absoluteY="-187dp">

        <EditText
            android:id="@+id/editTextCriarGrupoNome"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/Nome"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.094" />

        <EditText
            android:id="@+id/editTextCriarGrupoHorarioInicio"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/HorarioDeInicio"
            android:inputType="time"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.24000001" />


        <EditText
            android:id="@+id/editTextCriarGrupoHorarioTermino"
            android:layout_width="278dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/HorarioDeTermino"
            android:inputType="time"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32" />

        <EditText
            android:id="@+id/editTextCriarGrupoLocalizacao"
            android:layout_width="278dp"
            android:layout_height="90dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/Localizacao"
            android:inputType="textMultiLine"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.66999996" />

        <EditText
            android:id="@+id/editTextCriarGrupoDescricao"
            android:layout_width="275dp"
            android:layout_height="113dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/Descricao"
            android:inputType="textMultiLine"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.525"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85" />

        <CheckBox
            android:id="@+id/checkBoxNivelIniciante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:shadowColor="@color/colorPrimary"
            android:text="@string/Iniciante"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.077"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.53" />

        <TextView
            android:id="@+id/textViewNovoGrupo"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/NovoGrupo"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="DuplicateIds" />

        <Button
            android:id="@+id/buttonCriarGrupo"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:onClick="inserirGrupos"
            android:text="@string/CriarGrupo"
            android:textColor="@color/corDeFundo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"
            tools:ignore="DuplicateIds" />

        <EditText
            android:id="@+id/editTextCriarGrupoDataAno"
            android:layout_width="94dp"
            android:layout_height="41dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/DataAno"
            android:inputType="date"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.806"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.17000002" />

        <TextView
            android:id="@+id/textViewModalidadeGrupo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/Modalidades"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.050000012" />

    </android.support.constraint.ConstraintLayout>

    <EditText
        android:id="@+id/editTextCriarGrupoDataMes"
        android:layout_width="87dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/DataMes"
        android:inputType="date"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />


    <CheckBox
        android:id="@+id/checkBoxNivelIntermediario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:checked="false"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/Intermediario"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <CheckBox
        android:id="@+id/checkBoxNivelAvancado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/Avancado"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.913"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <EditText
        android:id="@+id/editTextCriarGrupoCusto"
        android:layout_width="282dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/Custo"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39999998" />

    <TextView
        android:id="@+id/textViewNivel"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Nivel"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474" />

    <EditText
        android:id="@+id/editTextCriarGrupoDataDia"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/DataDia"
        android:inputType="date"
        android:textColor="@color/colorPrimary"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />

</android.support.constraint.ConstraintLayout>